[gd_scene load_steps=10 format=3 uid="uid://dp4m2oygvb11"]

[ext_resource type="Script" path="res://scripts/sabotage.gd" id="1_eybtc"]
[ext_resource type="Texture2D" uid="uid://6gpyrxrkj3hh" path="res://32x32_Steampunk_Lamps.png" id="2_hclg0"]
[ext_resource type="PackedScene" uid="uid://bso038wqmv1dd" path="res://sabotage_popup.tscn" id="3_v25h7"]
[ext_resource type="PackedScene" path="res://bomb_object.tscn" id="4_xcmfa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5tf1a"]
atlas = ExtResource("2_hclg0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4yfyq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tf1a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2ne1e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mi6q"]
size = Vector2(26, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_bmonn"]
radius = 24.0208

[node name="sabotage" type="StaticBody2D"]
position = Vector2(151, 54)
script = ExtResource("1_eybtc")
metadata/_edit_group_ = true

[node name="sabotage_art" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
sprite_frames = SubResource("SpriteFrames_4yfyq")

[node name="sabotage_art_highlight" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2ne1e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0mi6q")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_bmonn")

[node name="sabotage_popup" parent="." instance=ExtResource("3_v25h7")]
position = Vector2(-136, -196)

[node name="bomb_object" parent="." instance=ExtResource("4_xcmfa")]
position = Vector2(0, -1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
